--- a/Assignment2-artifact/TestCode/.classpath
+++ b/Assignment2-artifact/TestCode/.classpath
@@ -6,6 +6,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="C:/Users/aabdr/Documents/GitHub/SENG 438/seng438-a2-group26/Assignment2-artifact/Assignment2-artifact/jfreechart-1.0.19/jfreechart-1.0.19/lib/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="lib" path="C:/Users/aabdr/Documents/GitHub/SENG 438/seng438-a2-group26/Assignment2-artifact/Assignment2-artifact/jfreechart-1.0.19/jfreechart-1.0.19/lib/jcommon-1.0.23.jar"/>
 	<classpathentry kind="lib" path="C:/Users/aabdr/Documents/GitHub/SENG 438/seng438-a2-group26/Assignment2-artifact/Assignment2-artifact/jfreechart-1.0.19/jfreechart-1.0.19/lib/jfreechart-1.0.19.jar"/>
@@ -22,5 +23,6 @@
 	<classpathentry kind="lib" path="C:/Users/aabdr/Documents/GitHub/SENG 438/seng438-a2-group26/Assignment2-artifact/Assignment2-artifact/jfreechart-1.0.19/jfreechart-1.0.19/lib/Jmock/jmock-junit4-2.5.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/aabdr/Documents/GitHub/SENG 438/seng438-a2-group26/Assignment2-artifact/Assignment2-artifact/jfreechart-1.0.19/jfreechart-1.0.19/lib/Jmock/jmock-legacy-2.5.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/aabdr/Documents/GitHub/SENG 438/seng438-a2-group26/Assignment2-artifact/Assignment2-artifact/jfreechart-1.0.19/jfreechart-1.0.19/lib/Jmock/jmock-script-2.5.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/aabdr/Downloads/hamcrest-all-1.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
